# knowledge_base

./: README.md  doc_appendix.md  documentation.md  requirements.txt
kb_modules/: README.md  documentation.txt  memory_extension.md
kb_modules/kb_rust/: .gitignore
kb_modules/kb_rustc/: .gitignore
kb_modules/kb_rustc/kb_memory/kb_memory_module/: Cargo.toml
kb_modules/kb_rustc/kb_memory/kb_memory_module/src/: basic_memory_module.rs  construct_mem_db.rs  lib.rs  search_memory_db.rs
kb_modules/kb_zig/: build.zig
kb_python/: # job queue tables.py  __init__.py  construct_kb.py  kb_query_support.py  status_table.py
kb_python/claude.ai/: base_construct_kb.py  construct_kb.py
kb_python/construct_kb/: __init__.py  construct_data_tables.py  construct_job_table.py  construct_kb.py  construct_rpc_client_table.py  construct_rpc_server_table.py  construct_status_table.py  construct_stream_table.py
kb_python/data_structures/: kb_data_structures.py  kb_job_table.py  kb_rpc_client.py  kb_stream.py
kb_python/grok/: description  new_table
kb_python/kb_memory/: construct_mem_db.py
kb_python/query_kb/: kb_job_client.py  (+7 more)
kb_typescript/: running_typescipt.txt
notes/: add_node_notes.txt  find_create_db.txt  installing_postgres_support.txt  psql_notes.txt  python_virtual_environment.txt
postgres/: pyvenv.cfg
python_kb_scripts/: __init__.py  construct_kb.py  kb_query_support.py
python_kb_utilites/: __init__.py  sql_script.py
python_scripts/: construct_kb.py  dump_kb.py  kb_query_support.py
sql_scripts/: create_knowledge_table.sql
typescript/: contruct_kb.ts
(+179 files in other folders)
